[project]
name = "vitaltrack"
version = "1.0.0"
description = "Telegram medical monitoring platform (patients + doctors)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "aiogram>=3.4,<4",
  "SQLAlchemy[asyncio]>=2.0.28",
  "asyncpg>=0.29",
  "psycopg2-binary>=2.9",
  "alembic>=1.13",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "redis>=5.0",
  "APScheduler>=3.10",
  "reportlab>=4.0",
  "python-dateutil>=2.9",
  "tzdata>=2024.1",
  "httpx>=0.27",
  "orjson>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "pytest-asyncio>=0.23",
  "ruff>=0.3",
  "mypy>=1.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["B008"]
